--- a/Index.html
+++ b/Index.html
@@ -2,9 +2,33 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Centered Iframe</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        #iframeContainer {
+            width: 80%; /* Adjust the width as needed */
+            height: 60vh; /* Adjust the height as needed */
+        }
+
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none; /* Remove iframe border if needed */
+        }
+    </style>
 </head>
 <body>
+    <div id="iframeContainer">
     <iframe style="max-width:100%" src="https://wordwall.net/ar/embed/bf82354e604548cab1fcff8b509ecca5?themeId=1&templateId=5&fontStackId=0" width="500" height="380" frameborder="0" allowfullscreen></iframe>
+    </div>
 </body>
 </html>
