--- a/Index.html
+++ b/Index.html
@@ -24,6 +24,13 @@
             height: 100%;
             border: none; /* Remove iframe border if needed */
         }
+
+        @media screen and (max-width: 600px) {
+            #iframeContainer {
+                width: 90%; /* Adjust for smaller screens */
+                height: 50vh; /* Adjust for smaller screens */
+            }
+        }
     </style>
 </head>
 <body>
